Add efidisk support

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -105,6 +105,7 @@ RSpec/DescribedClass:
     - 'spec/helpers/controller_helper_spec.rb'
     - 'spec/helpers/cpu_helper_spec.rb'
     - 'spec/helpers/disk_helper_spec.rb'
+    - 'spec/helpers/efidisk_helper_spec.rb'
     - 'spec/helpers/ip_helper_spec.rb'
     - 'spec/helpers/nic_helper_spec.rb'
     - 'spec/identity_spec.rb'
@@ -125,6 +126,7 @@ RSpec/FilePath:
     - 'spec/helpers/controller_helper_spec.rb'
     - 'spec/helpers/cpu_helper_spec.rb'
     - 'spec/helpers/disk_helper_spec.rb'
+    - 'spec/helpers/efidisk_helper_spec.rb'
     - 'spec/helpers/ip_helper_spec.rb'
     - 'spec/helpers/nic_helper_spec.rb'
     - 'spec/identity_spec.rb'
