--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -77,7 +77,7 @@ Naming/ConstantName:
 # ForbiddenPrefixes: is_, has_, have_
 # AllowedMethods: is_a?
 # MethodDefinitionMacros: define_method, define_singleton_method
-Naming/PredicateName:
+Naming/PredicatePrefix:
   Exclude:
     - 'spec/**/*'
     - 'lib/fog/proxmox/compute/models/disk.rb'
@@ -119,7 +119,7 @@ RSpec/ExampleLength:
 # Offense count: 9
 # Configuration parameters: Include, CustomTransform, IgnoreMethods, SpecSuffixOnly.
 # Include: **/*_spec*rb*, **/spec/**/*
-RSpec/FilePath:
+RSpec/RSpec/SpecFilePathFormat:
   Exclude:
     - 'spec/compute_spec.rb'
     - 'spec/hash_spec.rb'
